syntax = "proto3";

//conversation - string
// invite_id - string
//

package workflow;

option go_package = "github.com/webitel/chat_manager/api/proto/workflow";

import "message.proto";

service FlowChatServerService {
    rpc Start(StartRequest) returns (StartResponse) {}
    rpc Break(BreakRequest) returns (BreakResponse) {}
    rpc BreakBridge(BreakBridgeRequest) returns (BreakBridgeResponse) {}
    rpc ConfirmationMessage(ConfirmationMessageRequest) returns (ConfirmationMessageResponse) {}
    rpc TransferChatPlan(TransferChatPlanRequest) returns (TransferChatPlanResponse) {}
}

message BreakBridgeRequest {
    string conversation_id = 1;
    string cause = 2;
}

message BreakBridgeResponse {

}

message TransferChatPlanRequest {
    string conversation_id = 1;
    int32 plan_id = 2;
}


message TransferChatPlanResponse {

}

message StartRequest {
    string conversation_id = 1;
    int64 profile_id = 2;
    int64 domain_id = 3;
    webitel.chat.server.Message message = 4;
     map<string, string>  variables = 5;
    int32 schema_id = 6;
    int64 user_id = 7;
}

message StartResponse {

}

message BreakRequest {
    string conversation_id = 1;
    string cause = 2;
}

message BreakResponse {

}

message ConfirmationMessageRequest {
    string conversation_id = 1;
    string confirmation_id = 2;
    repeated webitel.chat.server.Message messages = 3;
}

message ConfirmationMessageResponse {

}